parkrun-stats - Complete PairsTable class.